@@ -1,3 +1,8 @@
+2010-07-07  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/sugar/functions/rep.h: version of rep that takes a
+	primitive as the first argument
+
 2010-07-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Date.cpp: Imported mktime() from R (which is due to Arthur Olson)
